Added config setting for display scroll speed.

--- a/cacheberrypi.cfg
+++ b/cacheberrypi.cfg
@@ -5,6 +5,7 @@
 [Settings]
 MEASUREMENT_STANDARD = US    ; US or METRIC (Display distance in Miles or Kilometers?)  
 TIME_ZONE = US/Central       ; Time Zone name as formatted in /usr/share/zoneinfo 
+DISPLAY_SCROLL_SPEED = 4     ; Display scrolling speed - Lower # = Faster Scroll
 
 [Advanced]
 GEOCACHE_SOURCE = /var/autofs/removable/sda1/cacheberrypi/nav.csv
@@ -12,5 +13,3 @@ TRACKLOG_TARGET = tracks
 TRACKLOG_EXPORT_TARGET = /var/autofs/removable/sda1/cacheberrypi/tracks/
 DATABASE_FILENAME = geocaches.sqlite
 LED_PINS = 16,18,22 ;GPIO23,24,25
-LED_SEARCH_STATUS = 2
-LED_CLOSE = 1
