Moved search pattern settings to cfg file

--- a/cacheberrypi.cfg
+++ b/cacheberrypi.cfg
@@ -13,3 +13,30 @@ TRACKLOG_TARGET = tracks
 TRACKLOG_EXPORT_TARGET = /var/autofs/removable/sda1/cacheberrypi/tracks/
 DATABASE_FILENAME = geocaches.sqlite
 LED_PINS = 16,18,22 ;GPIO23,24,25
+
+[SearchPattern]
+
+# Settings in this section are in Metric, regardless of the Measurement_Standard
+# Selected above.  
+
+# Starting search radius.  The actual radius is adjusted as we find / don't find
+# caches.
+STARTING_SEARCH_RADIUS = 1000 #m
+
+# Automatically show cache within this distance regardless of the direction to 
+# the cache.
+CLOSE_RADIUS = 100 #m
+
+# Maximum search radius.  Prevents search radius from growing indefinately.
+MAXIMUM_RADIUS = 40000 #m
+
+# When traveling above SPEED_THRESHOLD, return closest cache that is no more
+# that this distance from the estimate path of travel.  This will approximately 
+# return caches on your route when traveling along highways.
+MAXIMUM_DISTANCE_FROM_PATH = 200 #m
+
+# This speed threshold is used to switch between the slow speed searching 
+# behaviour (look for closest cache in any direction) and the high speed
+# behaviour (look for closest cache along path of travel).
+SPEED_THRESHOLD = 60 #km/h
+
